# statistical

./: .travis.yml  AUTHORS  Cargo.toml  LICENSE  README.md
src/: lib.rs  stats_.rs  univariate_.rs
