[package]
name = "statistical"
description = "A simple statistics library"
version = "1.0.0"
authors = ["Jeff Belgum <jeffbelgum@gmail.com>"]

repository = "https://github.com/JeffBelgum/statistical"
documentation = "https://jeffbelgum.github.io/statistical/statistical/"
homepage = "https://github.com/JeffBelgum/statistical"

license = "MIT"
readme = "README.md"
keywords = ["statistics", "statistical", "analysis", "math", "algorithm", "no_std"]

[dependencies]
rand_distr = { version = "0.2.2", default-features = false }
rand = { version = "0.7.3", default-features = false }
num = { version = "0.3.0", default-features = false }
hashbrown = { version = "0.8", optional = true}

[features]
default = [ "std" ]
std = [ "rand/std", "num/std" ]
no_std = [ "hashbrown", "num/libm" ]